# PiCam

./: .env  README.md  picam.py  pyproject.toml  qr204.py
